# platoon_simulations

./: CMakeLists.txt  README.md  package.xml
launch/: empty_world.launch.py  formation_control.launch.py  platoon_bringup.launch.py  platoon_control.launch.py  rviz2.launch.py  spawn_robot.launch.py  test_plt_bringup.launch.py  test_plt_spawn.launch.py
params/: platoon_config.yaml
rviz/: plt_2robots.rviz  plt_3robots.rviz
src/: formation_control_node.py  generate_trajectory_node.py  last_working_fc_code.py  multi_teleop.py  performance_matrices.py  teleop.py  trajectory_control_node.py
urdf/: gazebo_specific.urdf.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_waffle.urdf.xacro
